2013-11-21 Franz Holzinger <franz@ttproducts.de>
	* modifications for TYPO3 6.2

2012-12-03 Franz Holzinger <franz@ttproducts.de>
	* fix bug: do not use passthrough fields in $TCA

2012-11-19 Franz Holzinger <franz@ttproducts.de>
	* replace deprecated t3lib_div::intInRange by t3lib_utility_Math::forceIntegerInRange in function getQueryConf
	* enhance function getQueryConf with support for markers

2012-10-12 Franz Holzinger <franz@ttproducts.de>
	* fix bug with closing bracked in order by functions

2012-10-10 Franz Holzinger <franz@ttproducts.de>
	* new feature: add support of SQL functions to transformOrderby and make it usable for GROUP BY

2012-09-26 Franz Holzinger <franz@ttproducts.de>
	* new feature: enhance searchWhere with regular expression

2012-07-05 Franz Holzinger <franz@ttproducts.de>
	* new feature: use searchWhere from tslib_content but consider the language table
	* fix bug: make it PHP 5.4 compliant and remove the address operator before objects

2012-05-10 Franz Holzinger <franz@ttproducts.de>
	* fix bug: do not add required fields which are not in the TCA
	* fix bug: missing language tables must be added in exec_SELECTquery

2011-09-10 Franz Holzinger <franz@ttproducts.de>
	* PHP 5.2 is the minimum requirement
	* new feature: pidInList shall not be set to this in function getQueryConf when it has been empty

2011-03-11 Franz Holzinger <franz@ttproducts.de>
	* fix bug with HTML order confirmation emails. The contene of the subpart ###BASKET_ORDERCONFIRMATION_TEMPLATE### has not been inserted into the HML part of the email.

2011-03-09 Franz Holzinger <franz@ttproducts.de>
	* consider the recursive setup for the category list view
	* keep always the singe product and article parameters, except with the link from the single view to list view if both are on the same page