@@ -1,3 +1,9 @@
+
+2014-08-12 Franz Holzinger <franz@ttproducts.de>
+	* introduce new db passthrough check
+	* fix bug debug_trail: debugTrail
+	* no t3lib_div::loadTCA since TYPO3 6.1
+
 2013-11-21 Franz Holzinger <franz@ttproducts.de>
 	* modifications for TYPO3 6.2
 
